# ldiff

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
crates/jdiff-cli/src/: main.rs
crates/jdiff-core/: Cargo.toml
crates/jdiff-core/src/: detect.rs  lib.rs  merge.rs  nested.rs
crates/jdiff-core/tests/: core.rs
crates/ldiff-core/src/: archive.rs  detect.rs  edit.rs  lib.rs  merge.rs  sidecar_protocol.rs
crates/ldiff-core/tests/: core.rs
docs/: ARCHITECTURE.md  LCDIFF_COMPLETION_AUDIT.md  LDIFF_COMPLETION_AUDIT.md  OPERATIONS_MACOS.md  README.md  RELEASING.md
docs/release-notes/: v0.1.0.md
docs/superpowers/plans/: 2026-06-07-file-tree-hierarchy-status.md  2026-06-07-nested-archive-expand.md  2026-06-08-multi-tab-diff.md  2026-06-08-standalone-text-file-compare-merge.md  2026-06-10-side-by-side-diff-and-filter-revamp.md  2026-06-12-hide-inner-class-tree.md  2026-06-15-search-bar-simplification.md  (+6 more)
scripts/: assemble-sidecar-resources.sh  build-linux.sh  build-windows.ps1  install-linux.sh  install-macos.sh  sign-windows-bundles.ps1  test-sidecar-smoke.mjs  verify-docs.mjs  verify-frontend-invariants.mjs  verify-frontend-render.mjs  verify-macos-distribution.sh  verify-windows-platform.ps1
sidecar/: README.md  pom.xml
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  sidecar_process.rs  system_fonts.rs
src/components/: ConfigDrawer.test.tsx  ConfigDrawer.tsx  DiffView.test.tsx  DiffView.tsx  FileTree.test.tsx  FileTree.tsx  KeyboardShortcutsDialog.test.tsx  KeyboardShortcutsDialog.tsx  MenuBar.test.tsx  MenuBar.tsx  SearchBar.test.tsx  SearchBar.tsx  SearchResultsPanel.test.tsx  SearchResultsPanel.tsx  SourceChips.test.tsx  SourceChips.tsx  SplashScreen.test.tsx  SplashScreen.tsx  WorkspaceTabs.test.tsx  WorkspaceTabs.tsx
src/lib/: actions.test.ts  actions.ts  history.ts  motion.test.ts  motion.ts  preferences.test.ts  preferences.ts  search.test.ts  search.ts  shortcuts.test.ts  shortcuts.ts  status.test.ts  status.ts  tabs.test.ts  tabs.ts  themes.test.ts  themes.ts  tree.test.ts  tree.ts  types.test.ts  types.ts
(+17 files in other folders)
