[workspace]
members = ["crates/ldiff-core", "crates/ldiff-cli", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.1"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
