[package]
name = "jdiff-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crc32fast.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
zip.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
